Mobile menu has several issues, especially on Firefox #272

--- a/Tinville/static/css/main.css
+++ b/Tinville/static/css/main.css
@@ -1334,11 +1334,11 @@ textarea
         position           : fixed;
         height             : 100%;
         width              : 70%;
-        /*top                : 0;*/
+        top                : 0;
         left               : 0;
         background-color   : #F1EEEF;
         overflow           : hidden;
-        /*margin-top         : 50px;*/
+        margin-top         : 58px;
 
         -webkit-transform  : translate(-100%, 0);
         -webkit-transition : all 1s ease;
